--- a/Videos/MainInterface.storyboard
+++ b/Videos/MainInterface.storyboard
@@ -19,14 +19,14 @@
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eNw-ML-XVc">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="162"/>
                             </pickerView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QN7-BA-3RF">
-                                <rect key="frame" x="199" y="170" width="203" height="42"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QN7-BA-3RF">
+                                <rect key="frame" x="234" y="170" width="132" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="5TB-ft-khP"/>
                                     <constraint firstAttribute="width" constant="132" id="Dwp-Qk-5qg"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                <state key="normal" title="Go to Lesson Quiz">
+                                <state key="normal" title="Go to video">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
