--- a/MathHelper/Secret.storyboard
+++ b/MathHelper/Secret.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="ltb-Jt-DIW">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -17,15 +18,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uRj-Yg-Z3G">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uRj-Yg-Z3G" customClass="YHRoundBorderedButton">
                                 <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="WDE-eq-Njt"/>
                                     <constraint firstAttribute="width" constant="125" id="qjc-zv-cdG"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Yay, I guess...">
-                                    <color key="titleColor" red="0.0" green="1" blue="0.012900601687469759" alpha="1" colorSpace="calibratedRGB"/>
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <variation key="default">
@@ -104,12 +106,12 @@ can tell me (Aaron) because I'm interested to know how many people actually find
                                 <exclude reference="ZHl-OI-hec"/>
                                 <exclude reference="gOV-gL-fda"/>
                                 <exclude reference="rBV-Vt-fLC"/>
-                                <exclude reference="3va-xS-nFm"/>
-                                <exclude reference="YE1-yI-AiJ"/>
-                                <exclude reference="pEw-Ge-E3X"/>
                                 <exclude reference="tKX-m8-9cb"/>
                                 <exclude reference="wo3-Zs-Fvt"/>
                                 <exclude reference="KuM-VX-1sp"/>
+                                <exclude reference="3va-xS-nFm"/>
+                                <exclude reference="YE1-yI-AiJ"/>
+                                <exclude reference="pEw-Ge-E3X"/>
                                 <exclude reference="51c-jB-2Il"/>
                             </mask>
                         </variation>
@@ -125,12 +127,12 @@ can tell me (Aaron) because I'm interested to know how many people actually find
                                 <include reference="ZHl-OI-hec"/>
                                 <include reference="gOV-gL-fda"/>
                                 <include reference="rBV-Vt-fLC"/>
-                                <include reference="3va-xS-nFm"/>
-                                <include reference="YE1-yI-AiJ"/>
-                                <include reference="pEw-Ge-E3X"/>
                                 <include reference="tKX-m8-9cb"/>
                                 <include reference="wo3-Zs-Fvt"/>
                                 <include reference="KuM-VX-1sp"/>
+                                <include reference="3va-xS-nFm"/>
+                                <include reference="YE1-yI-AiJ"/>
+                                <include reference="pEw-Ge-E3X"/>
                                 <include reference="51c-jB-2Il"/>
                             </mask>
                         </variation>
